--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
   <string name="navigation_drawer_close">Close navigation drawer</string>
 
   <string name="action_settings">Settings</string>
+
+  <string name="you_have_no_game_saved">You have no game saved.</string>
+  <string name="add_button_desc">Click on the add button
+    below to start tracking one.</string>
 </resources>
