Initial commit for games activity. I added some new colours, a tab layout, and modified a little bit of the generated code. Note: quite a bit of the generated code need to be removed

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -34,5 +34,7 @@
   <string name="F">Foul</string>
   <string name="S">Steal</string>
   <string name="TO">Turnover</string>
+  <string name="title_activity_game">GameActivity</string>
+  <string name="section_format">Hello World from section: %1$d</string>
 
 </resources>
