- FINALLY able to layout the flying stats properly - Layout when window has focus, release all when not have focus - Change the stat background and dimensions - Other stuffs too many to mention

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -18,22 +18,22 @@
   <string name="offensive_rebound">Offensive Rebound</string>
   <string name="field_goal_attempt">Field Goal Attempt</string>
   <string name="field_goal_made">Field Goal Made</string>
-  <string name="field_throw_attempt">Field Goal Attempt</string>
-  <string name="field_throw_made">Field Goal Made</string>
+  <string name="field_throw_attempt">Field Throw Attempt</string>
+  <string name="field_throw_made">Field Throw Made</string>
   <string name="foul">Foul</string>
   <string name="steal">Steal</string>
   <string name="turnover">Turnover</string>
-  <string name="A">Assist</string>
-  <string name="B">Block</string>
-  <string name="DR">Defensive Rebound</string>
-  <string name="OR">Offensive Rebound</string>
-  <string name="FGA">Field Goal Attempt</string>
-  <string name="FGM">Field Goal Made</string>
-  <string name="FTA">Field Goal Attempt</string>
-  <string name="FTM">Field Goal Made</string>
-  <string name="F">Foul</string>
-  <string name="S">Steal</string>
-  <string name="TO">Turnover</string>
+  <string name="A">A</string>
+  <string name="B">B</string>
+  <string name="DR">DR</string>
+  <string name="OR">OR</string>
+  <string name="FGA">FGA</string>
+  <string name="FGM">FGM</string>
+  <string name="FTA">FTA</string>
+  <string name="FTM">FTM</string>
+  <string name="F">F</string>
+  <string name="S">S</string>
+  <string name="TO">TO</string>
   <string name="title_activity_game">GameActivity</string>
   <string name="section_format">Hello World from section: %1$d</string>
 
