Adding the logic for the flier to sense when it's near landing site, and handle the event accordingly

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -35,6 +35,6 @@
   <string name="S">S</string>
   <string name="TO">TO</string>
   <string name="title_activity_game">GameActivity</string>
-  <string name="section_format">Hello World from section: %1$d</string>
+  <string name="flyier_landed">Flier has landed</string>
 
 </resources>
